--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-*{
+:root{
+	--dark-color:#201c1c;
+	--shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+;
+	}*{
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
@@ -6,7 +10,8 @@
 body{
 	background-color: grey;
 	font-family: sans-serif;
-	overflow-y: hidden;
+
+	overflow: hidden;
 }img{
 	display: block;
 	max-width: 100%;
@@ -21,7 +26,6 @@ body{
 }.welcome-page>img{
 	width: 90%;
 	margin: 2em auto;
-
 	}.welcome-page h1{
 	text-align: center;
 	font-size: 2.3rem;
@@ -37,13 +41,15 @@ body{
 	border-radius: 5px;
 	padding: 1em;
 
-}
+}#start{
+	animation: float 3s infinite;
+	}
 section.game-container{
 	background-color: mintcream;
 	margin: auto;
 	position: relative;
 	width:355px;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	box-shadow: var(--shadow);
 	border-radius: 5px;
 	margin-top: 4%;
 }section.game-container::after{
@@ -53,11 +59,12 @@ section.game-container{
 	left: -22%;
 	/*transform: translate(-50%,-50%);*/
 	z-index: -1;
+	/*border: 1px solid red;*/
 	animation: slidein 3s;
 	}.game-title{
 	padding: .8em 0;
-	border-bottom: 2px solid grey;
-}@keyframes slidein{
+/*	border-bottom: 1px solid grey;
+*/}@keyframes slidein{
 	from{
 		transform: translateY(500px);
 	}to{
@@ -70,12 +77,54 @@ section.game-container{
 	align-items: center;
 	gap:1em;
 	/*justify-content: space-between;*/
-}.game-title img{
-	width: min(12%,50px);
+}.component-game-info{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	/*border: 1px solid red;*/
+}.component-game-info img{
+	width: 40px;
+	height: 25px;
+	}.game-title img{
+	width: 50px;
 	margin-left: 1em;
-	animation: 2s float infinite;
 
-}@keyframes float{
+}.progress-container{
+	height: 2px;
+	width: 100%;
+	background-color: lightgrey;
+}.progress{
+	width: 0;
+	background-color: teal;
+	height: 100%;
+	position: relative;
+	border-radius: 5px;
+	transition: width 1s;
+}.progress::after{
+	content: " ";
+	position: absolute;
+	left: 100%;
+	top: 50%;
+	border-radius: 5px;
+	transform: translate(-50%,-50%);
+	border:5px solid;
+
+}.result{
+	width: 80px;
+	display: flex;
+	color: teal;
+	justify-content: space-between;
+    align-items: center;			
+	/*border:1px solid red;*/
+}.result.false{
+	color: tomato;
+}/*@keyframes progress{
+	from{
+		width: 0;
+	}to{
+		width: 10%;
+	}
+}*/@keyframes float{
 		30%{
 		transform: rotate(7deg);
 
@@ -85,23 +134,25 @@ section.game-container{
 		70%{
 		transform: translateY(7px);
 		}
-}.game-board :is(p){
-	animation: fadein .9s ;
-	}.container-body{
+}.game-board p,.welcome-page img,html,.game-info{
+	animation: fadein 1s ;
+}.container-body{
 	padding: 1.3em;
 }.container-body>h3{
 text-align: center;
 letter-spacing: .4em;
+height: 22px;
 /*line-height: 2em;*/
 margin: 1em auto;
 }.game-info{
-	line-height: 2em;
+	line-height: 1.8em;
 	margin: .5em 0;
-	color: grey;
 }[type="text"]{
 	width: 100%;
 	padding: .7em;
-}.control-btns{
+}[data-display="false"]{
+	display: none;
+	}.control-btns{
 		/*border:1px solid red;*/
 	margin: 1.5em  auto .5em auto;
 	display: flex;
@@ -109,6 +160,7 @@ margin: 1em auto;
 }.control-btns button{
 	width: 47%;
 	outline: none;
+	border-radius: 3px;
 	border: none;
 	color: white;
 	padding: .7em;
@@ -116,7 +168,7 @@ margin: 1em auto;
 	background-color: teal;
 }.control-btns button:nth-child(1){
 	background-color: grey;
-}:is(#start,.control-btns button):hover{
+}button:hover{
 	transform: scale(.9);
 }@keyframes fadein{
 	from{
@@ -126,4 +178,78 @@ margin: 1em auto;
 		transform: translateX(0);
 		opacity: 1;
 	}
+}
+.toggle-display{
+	display: block;
+}.snackBar{
+	position: absolute;
+	bottom: 10%;
+	left: 50%;
+	z-index: 1;
+	text-align: center;
+	display: none;
+	margin-left: -100px;
+	width: 200px;
+	background-color: rgba(0,0,0,0.4);
+	color: white;
+	padding: 10px;
+	border-radius: 7px;
+	animation: snackBarAnime-FadeIn 0.5s,snackBarAnime-Fadeout 0.5s 2.5s;
+}.snackBar.show{
+	display: block;
+}@keyframes snackBarAnime-FadeIn{
+from{
+	bottom: 0;
+	opacity: 0;
+}to{
+	bottom: 10%;
+	opacity: 1;
+}
+}@keyframes snackBarAnime-Fadeout{
+from{
+	bottom: 10%;
+}to{
+	bottom: 0;
+	opacity: 0;
+}
+}
+.result-modal{
+	position: absolute;
+	text-align: center;
+	padding: .5em;
+	color: white;
+	display: none;
+	border-top-right-radius: 20px;
+	border-top-left-radius: 20px;
+	width: 100%;
+	box-shadow: var(--shadow);
+	background-color: grey;
+	transition: all .3s;
+}.result-modal::after{
+	content: "";
+	position: absolute;
+	width: 30px;
+	height: 5px;
+	background-color: var(--dark-color);
+	top: .4em;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	border-radius: 5px;
+}.next-btn{
+	padding: .7em;
+	width: 95%;
+	margin: .8em auto;
+	border:none;
+	border-radius: 5px;
+	background-color: var(--dark-color);
+	color: white;
+	display: block;
+}.result-modal img{
+	width: 80px;
+	height: 80px;
+	mix-blend-mode: color-burn;
+	margin: .4em auto;
+}.result-modal.show{
+	transform: translateY(-126px);
+	display:block;
 }
